<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">SEQR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="qr_generator">QR Generator</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="title_activity_qrscanner">QR Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_qr_scanner">QR Scanner</string>
    <string name="title_activity_qr_generator">QR Generator</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="Settings">Settings</string>
    <string name="QRScanner">QR Scanner</string>
    <string name="QRGenerator">QR Generator</string>
    <string name="History">History</string>
    <string name="slide1_heading">Welcome</string>
    <string name="slide1_text">Welcome to Privacy friendly QR scanner. This tutorial will cover the most important things you need to know.</string>
    <string name="slide2_heading">What are the features?</string>
    <string name="text_slide2">This app allows you to both scan and create QR codes. Scanned QR codes are saved in the history, and you can easily share or copy them.</string>
    <string name="slide3_heading">Further info about QR code scanning</string>
    <string name="text_slide3">To help protect you from phishing, this app supports you while scanning QR codes that lead to websites. For effective protection, please read the following information on how the app assists you and what you should check yourself.</string>
    <string name="wecome">Welcome</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="help_">Help</string>
    <string name="tutorial">Tutorial</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names_pfa" translatable="false">Christopher Beckmann, Bassel Hanna, Philipp Rack, Tobias Länge</string>
    <string name="about_description">SEQR is a prototype QR‑code reader built to safeguard users against malicious QR codes.
        It augments the conventional scanning workflow with a suite of security features.
        This version presents a review‑ready build of SEQR,
        intended for academic evaluation and user‑testing to validate its effectiveness,
        usability, and resilience against emerging QR‑based attack vectors.
        \n
        \n
        This app is based on the app "Privacy Friendly QR Scanner", whose source code is licensed under GPLv3, as is this app\'s source code.
        More information about the original app can be found on <a href="https://github.com/SecUSo/privacy-friendly-qr-scanner">GitHub</a></string>
    <string name="about_author_string">%s and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This is one of many privacy-friendly apps developed by SECUSO. Source code licensed GPLv3. Images copyright Karlsruhe Institute of Technology and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github"><a href="https://github.com/SecUSo/privacy-friendly-qr-scanner">GitHub-Repo</a></string>
    <string name="url_secuso"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="about_libraries">Used libraries:</string>
    <string name="lib_url" translatable="false"><a href="https://github.com/zxing">ZXing</a></string>
    <string name="app_name_long">Security Enhanced QR code scanner</string>
    <string name="version_number">Version v%s</string>
    <string name="delete_items">Delete items</string>
    <string name="scan_text">Place this window atop the code you want to decode.</string>
    <string name="action_clear">Clear History</string>
    <string name="cannot_clear">The history is already empty</string>
    <string name="knowRisks">I checked the link and want to visit the website.</string>
    <string name="domain">Domain</string>
    <string name="urlExplanation">QR-Codes can contain links, that lead to a faked website, which can compromise your personal data (phishing website) or transfer malware (e.g. viruses) to your device.\n\nAs a consequence you should <b>check</b> if the following link is the one you expected:</string>
    <string name="further_info"><a href="https://secuso.aifb.kit.edu/betr-nachrichten-flyer2EN">Information</a> on how to check links.</string>
    <string name="delete_history">Do you want to delete the history?</string>
    <string name="ok">Okay</string>
    <string name="element_removed">Element removed.</string>
    <string name="conform_url">Please confirm, that you checked the link.</string>
    <string name="wifi_explanation">This version of the app cannot connect to WIFI networks automatically due to the permission that would be needed. Below are some details about the network.</string>
    <string name="encryption">Encryption</string>
    <string name="action_about">About</string>
    <string name="history_disabled">History turned off</string>
    <string name="to">Recipient:</string>
    <string name="usability_hint2">If you cannot scan a code, increase the distance between the scanner and the code.</string>
    <string name="description_contact">The QR-Code you scanned contains contact information. In order to <i>import</i> it into your address book, click Proceed.</string>
    <string name="description_email">The QR-Code you scanned contains an email address. In order to <i>send an email</i> or <i>add it to a contact</i>, click Proceed.</string>
    <string name="description_send_email">The QR-Code you scanned contains a filled email. In order to <i>send</i> it or <i>add the address a contact</i>, click Proceed.</string>
    <string name="description_product">The code you scanned contains a product code. In order to <i>search the web</i> for product information, click Proceed.</string>
    <string name="description_tel">The QR-Code you scanned contains a phone number. In order to <i>start a call</i> or <i>add it to a contact</i>, just click Proceed.</string>
    <string name="description_sms">The QR-Code you scanned contains an SMS. In order to <i>send</i> the SMS or <i>add the number to a contact</i>, click Proceed.</string>
    <string name="description_text">The QR-Code you scanned contains plain text. In order to <i>search the web</i> for information, click Proceed.</string>
    <string name="pref_general_settings_category_title">General</string>
    <string name="pref_scanner_settings_category_title">Scanner</string>
    <string name="pref_history_settings_category_title">History</string>
    <string name="pref_title_enable_history">Enable History</string>
    <string name="pref_description_enable_history">Previous scans are logged for you to show them again</string>
    <string name="pref_search_engine_title">Default Search Engine</string>
    <string name="pref_enable_beep_on_scan_title">Beep on scan</string>
    <string name="pref_enable_beep_on_scan_summary">Play a confirmation tone when scanning</string>
    <string name="pref_save_real_image_to_history_title">Save real code</string>
    <string name="pref_save_real_image_to_history_summary">Saves a real image of the code instead of a recreation</string>
    <string name="pref_search_engine_enabled_title">Use search engines</string>
    <string name="pref_search_engine_enabled_summary">Display the \"Search\" button when scanning text.</string>
    <string name="pref_app_theme_title">Theme</string>
    <string name="pref_app_theme_default" translatable="false">SYSTEM</string>
    <string name="pref_search_engine_default" translatable="false">DUCK_DUCK_GO</string>
    <string name="url_dialog_risk_explanation_low_risk_part_1"><b>Low Risk:</b> Opening the website associated with the just-scanned QR code is deemed to be of low risk since the legitimacy of</string>
    <string name="url_dialog_risk_explanation_low_risk_part_2">is well established.</string>
    <string name="url_dialog_risk_explanation_unknown_risk_part_1"><b>Unknown Risk:</b> The risk of opening the website associated with the just-scanned QR code cannot be automatically determined. You have to assess the risk by yourself.\n\nPlease check and verify the legitimacy of</string>
    <string name="url_dialog_risk_explanation_unknown_risk_part_2">before opening the website address.</string>
    <string name="url_tutorial_slide_5_title">Info [5/9]: <font fgcolor='#388E3C'>Low risk (preset) dialog window</font></string>
    <string name="url_tutorial_slide_5_content"><u>Demonstration</u>\n\nHere is an example of a dialog window where the QR code scanner app recognized the <b>knownpage.com</b> as legitimate website. If in doubt, consider verifying the URL yourself.</string>
    <string name="url_tutorial_slide_8_title">Info [8/9]: <font fgcolor='#808080'>Unknown risk dialog window</font></string>
    <string name="url_tutorial_slide_8_content"><u>Demonstration 1:</u>\n\nHere is an example of a dialog window where the QR code scanner application did not find the <b>example.com</b> on the list of legitimate website addresses even when it’s a <b>legitimate</b> website because it is not one of the most visited websites.</string>
    <string name="url_dialog_settings_category_title">SEQR dialog</string>
    <string name="url_dialog_settings_category_summary">These settings configure the behavior of the dialog shown when you scan a qr code. See the tutorial for more information.</string>
    <string name="url_dialog_settings_waiting_time_title">Protection time</string>
    <string name="url_dialog_settings_waiting_time_summary">Specifies how many seconds you have to wait before you can open a url with unknown risk.</string>
    <string name="url_dialog_settings_visited_urls_title">Visited URLs history</string>
    <string name="url_dialog_settings_visited_urls_summary">Here you can edit the list of urls you have already visited.</string>
    <string name="url_dialog_settings_disable_tracking_visits_title">Track visited urls</string>
    <string name="url_dialog_settings_disable_tracking_visits_summary">If you disable this setting the app will no longer track which urls were visited by you and can therefor not give you hints about the risk level of previously visited urls.</string>
    <string name="url_dialog_settings_trusted_domains_title">Trusted domains</string>
    <string name="url_dialog_settings_trusted_domains_summary">Here you can manage the domains you added to the trusted domains list.</string>
    <string name="phishing_protection_settings_category_title">Phishing Protection</string>
    <string name="phishing_protection_settings_check_phishtank_title">PhishTank</string>
    <string name="phishing_protection_settings_check_phishtank_summary">Use PhishTank to check scanned urls for potential phishing websites.
        When you scan a QR code that contains a URL with this setting enabled,
        the url will be send to phishtank.org to check if it is a known phishing website.</string>
    <string name="phishing_protection_settings_resolve_redirects_title">Resolve redirects</string>
    <string name="phishing_protection_settings_resolve_redirects_summary">Automatically resolve short urls and redirects.
        When you scan a QR code that contains a URL to a known short url service or redirect,
        the app will automatically connect to that service and try to resolve the real url behind the redirect.</string>
</resources>