<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/pref_general_settings_category_title">
        <ListPreference
            android:defaultValue="@string/pref_app_theme_default"
            android:entries="@array/pref_app_theme_entries"
            android:entryValues="@array/pref_app_theme_values"
            android:key="pref_app_theme"
            android:summary="%s"
            android:title="@string/pref_app_theme_title"
            app:isPreferenceVisible="false" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_search_engine_enabled"
            android:summary="@string/pref_search_engine_enabled_summary"
            android:title="@string/pref_search_engine_enabled_title"
            app:isPreferenceVisible="false" />
        <ListPreference
            android:defaultValue="@string/pref_search_engine_default"
            android:dependency="pref_search_engine_enabled"
            android:entries="@array/pref_search_engine_entries"
            android:entryValues="@array/pref_search_engine_values"
            android:key="pref_search_engine"
            android:summary="%s"
            android:title="@string/pref_search_engine_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_history_settings_category_title"
        app:isPreferenceVisible="false">
        <SwitchPreference
            android:defaultValue="true"
            android:key="bool_history"
            android:summary="@string/pref_description_enable_history"
            android:title="@string/pref_title_enable_history" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_save_real_image_to_history"
            android:summary="@string/pref_save_real_image_to_history_summary"
            android:title="@string/pref_save_real_image_to_history_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_scanner_settings_category_title">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_enable_beep_on_scan"
            android:summary="@string/pref_enable_beep_on_scan_summary"
            android:title="@string/pref_enable_beep_on_scan_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/phishing_protection_settings_category_title">
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_phishing_protection_phishtank_enabled"
            android:title="@string/phishing_protection_settings_check_phishtank_title"
            android:summary="@string/phishing_protection_settings_check_phishtank_summary"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_phishing_protection_resolve_redirects_enabled"
            android:title="@string/phishing_protection_settings_resolve_redirects_title"
            android:summary="@string/phishing_protection_settings_resolve_redirects_summary"/>
    </PreferenceCategory>

    <com.secuso.privacyfriendlycodescanner.qrscanner.ui.helpers.ExtendedSummaryPreferenceCategory

        android:title="@string/url_dialog_settings_category_title"
        app:singleLineTitle="false"
        app:summary="@string/url_dialog_settings_category_summary">
        <EditTextPreference
            android:defaultValue="3"
            android:key="pref_url_classification_grey_case_waiting_time"
            android:summary="@string/url_dialog_settings_waiting_time_summary"
            android:title="@string/url_dialog_settings_waiting_time_title" />
        <Preference
            android:key="pref_url_classification_visited_urls"
            android:summary="@string/url_dialog_settings_visited_urls_summary"
            android:title="@string/url_dialog_settings_visited_urls_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_url_classification_url_tracking_enabled"
            android:summary="@string/url_dialog_settings_disable_tracking_visits_summary"
            android:title="@string/url_dialog_settings_disable_tracking_visits_title" />
        <Preference
            android:key="pref_url_classification_trusted_domains"
            android:summary="@string/url_dialog_settings_trusted_domains_summary"
            android:title="@string/url_dialog_settings_trusted_domains_title"
            app:isPreferenceVisible="false" />
    </com.secuso.privacyfriendlycodescanner.qrscanner.ui.helpers.ExtendedSummaryPreferenceCategory>

</PreferenceScreen>