<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/viewPagerControlsGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/rectangle_rounded"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/viewPagerControlsGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/dialog_border"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/border_rounded"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/AppTheme.URLDialog.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/url_tutorial_slide_8_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/textViewContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewContent"
            style="@style/AppTheme.URLDialog.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/url_tutorial_slide_8_content"
            app:layout_constraintBottom_toTopOf="@id/dialog_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.secuso.privacyfriendlycodescanner.qrscanner.ui.helpers.ScannerUrlDialogWrapper
            android:id="@+id/dialog_example"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:dialogColor="?attr/colorHostClassificationGrey"
            app:continueButtonTextColor="@color/url_classification_grey_case_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:textPart1="@string/url_dialog_risk_explanation_unknown_risk_part_1"
            app:textPart2="@string/url_dialog_risk_explanation_unknown_risk_part_2"
            app:textUrl="example.com">

            <include layout="@layout/scanner_url_dialog" />
        </com.secuso.privacyfriendlycodescanner.qrscanner.ui.helpers.ScannerUrlDialogWrapper>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>